include/libgpump.h

typedef size_t gpump_size_t ;
void gpump_f_init(MPI_Fint vcomm) ;
void gpump_f_register_region(MPI_Fint *mr_index,  void * vaddr, gpump_size_t vsize) ;
void gpump_f_replace_region(MPI_Fint vmr_index,  void * vaddr, gpump_size_t vsize) ;
void gpump_f_deregister_region(MPI_Fint vmr_index) ;
void gpump_f_connect_propose(MPI_Fint vtarget) ;
void gpump_f_connect_accept(MPI_Fint vtarget) ;
void gpump_f_disconnect(MPI_Fint vtarget) ;
void gpump_f_create_window_propose(MPI_Fint vtarget, void * vlocal_address, void * vremote_address, gpump_size_t vsize) ;
void gpump_f_replace_window_propose(MPI_Fint vtarget, void * vlocal_address, void * vremote_address, gpump_size_t vsize) ;
void gpump_f_window_accept(MPI_Fint vtarget) ;
void gpump_f_destroy_window(MPI_Fint vtarget) ;
void gpump_f_create_window_propose_x(MPI_Fint vtarget, MPI_Fint *wx, void * vlocal_address, void * vremote_address, gpump_size_t vsize) ;
void gpump_f_replace_window_propose_x(MPI_Fint vtarget, MPI_Fint wx, void * vlocal_address, void * vremote_address, gpump_size_t vsize) ;
void gpump_f_window_accept_x(MPI_Fint vtarget, MPI_Fint vwx) ;
void gpump_f_cork(void) ;
void gpump_f_uncork(cudaStream_t vstream) ;
void gpump_f_stream_put(MPI_Fint vtarget, cudaStream_t vstream, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
void gpump_f_iput(MPI_Fint vtarget, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
void gpump_f_stream_wait_put_complete(MPI_Fint vtarget, cudaStream_t vstream) ;
void gpump_f_cpu_ack_iput(MPI_Fint vtarget) ;
void gpump_f_is_put_complete(MPI_Fint vtarget, MPI_Fint *is_complete) ;
void gpump_f_wait_put_complete(MPI_Fint vtarget) ;
void gpump_f_stream_get(MPI_Fint vtarget, cudaStream_t vstream, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
void gpump_f_iget(MPI_Fint vtarget, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
void gpump_f_stream_wait_get_complete(MPI_Fint vtarget, cudaStream_t vstream) ;
void gpump_f_cpu_ack_iget(MPI_Fint vtarget) ;
void gpump_f_is_get_complete(MPI_Fint vtarget, MPI_Fint *is_complete) ;
void gpump_f_wait_get_complete(MPI_Fint vtarget) ;
void gpump_f_stream_put_x(MPI_Fint vtarget, MPI_Fint vwx, cudaStream_t vstream, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
void gpump_f_iput_x(MPI_Fint vtarget, MPI_Fint vwx, gpump_size_t voffset, gpump_size_t vremote_offset, gpump_size_t vsize ) ;
void gpump_f_stream_wait_put_complete_x(MPI_Fint vtarget, MPI_Fint vwx, cudaStream_t vstream) ;