include/gpump_f.F90

! Copyright (C) IBM Corporation 2018. All Rights Reserved
!
!    This program is licensed under the terms of the Eclipse Public License
!    v1.0 as published by the Eclipse Foundation and available at
!    http://www.eclipse.org/legal/epl-v10.html
!
!    
!    
! $COPYRIGHT$
module gpump_mod

interface gpump_f_init
subroutine gpump_f_init(comm) &
bind(C, name='gpump_f_init')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: comm
end subroutine gpump_f_init
end interface gpump_f_init

interface gpump_f_register_region
subroutine gpump_f_register_region(mr_index, addr, size) &
bind(C, name='gpump_f_register_region')
use iso_c_binding
integer(kind=C_INT), intent(out) :: mr_index
integer(kind=C_LONG), intent(in), value :: addr
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_register_region
end interface gpump_f_register_region

interface gpump_f_replace_region
subroutine gpump_f_replace_region(mr_index, addr, size) &
bind(C, name='gpump_f_replace_region')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: mr_index
integer(kind=C_LONG), intent(in), value :: addr
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_replace_region
end interface gpump_f_replace_region

interface gpump_f_deregister_region
subroutine gpump_f_deregister_region(mr_index) &
bind(C, name='gpump_f_deregister_region')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: mr_index
end subroutine gpump_f_deregister_region
end interface gpump_f_deregister_region

interface gpump_f_connect_propose
subroutine gpump_f_connect_propose(target) &
bind(C, name='gpump_f_connect_propose')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_connect_propose
end interface gpump_f_connect_propose

interface gpump_f_connect_accept
subroutine gpump_f_connect_accept(target) &
bind(C, name='gpump_f_connect_accept')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_connect_accept
end interface gpump_f_connect_accept

!interface gpump_f_connect
!subroutine gpump_f_connect(target) &
!bind(C, name='gpump_f_connect')
!use iso_c_binding
!integer(kind=C_INT), intent(in), value :: target
!end subroutine gpump_f_connect
!end interface gpump_f_connect

interface gpump_f_disconnect
subroutine gpump_f_disconnect(target) &
bind(C, name='gpump_f_disconnect')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_disconnect
end interface gpump_f_disconnect

interface gpump_f_create_window_propose
subroutine gpump_f_create_window_propose(target, local_address, remote_address, size) &
bind(C, name='gpump_f_create_window_propose')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: local_address
integer(kind=C_LONG), intent(in), value :: remote_address
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_create_window_propose
end interface gpump_f_create_window_propose

interface gpump_f_replace_window_propose
subroutine gpump_f_replace_window_propose(target, local_address, remote_address, size) &
bind(C, name='gpump_f_replace_window_propose')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: local_address
integer(kind=C_LONG), intent(in), value :: remote_address
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_replace_window_propose
end interface gpump_f_replace_window_propose

interface gpump_f_window_accept
subroutine gpump_f_window_accept(target) &
bind(C, name='gpump_f_window_accept')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_window_accept
end interface gpump_f_window_accept

!interface gpump_f_create_window
!subroutine gpump_f_create_window(target, local_address, remote_address, size) &
!bind(C, name='gpump_f_create_window')
!use iso_c_binding
!integer(kind=C_INT), intent(in), value :: target
!integer(kind=C_LONG), intent(in), value :: local_address
!integer(kind=C_LONG), intent(in), value :: remote_address
!integer(kind=C_LONG), intent(in), value :: size
!end subroutine gpump_f_create_window
!end interface gpump_f_create_window

interface gpump_f_destroy_window
subroutine gpump_f_destroy_window(target) &
bind(C, name='gpump_f_destroy_window')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_destroy_window
end interface gpump_f_destroy_window

interface gpump_f_create_window_propose_x
subroutine gpump_f_create_window_propose_x(target, wx, local_address, remote_address, size) &
bind(C, name='gpump_f_create_window_propose_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(out) :: wx
integer(kind=C_LONG), intent(in), value :: local_address
integer(kind=C_LONG), intent(in), value :: remote_address
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_create_window_propose_x
end interface gpump_f_create_window_propose_x

interface gpump_f_replace_window_propose_x
subroutine gpump_f_replace_window_propose_x(target, wx, local_address, remote_address, size) &
bind(C, name='gpump_f_replace_window_propose_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: wx
integer(kind=C_LONG), intent(in), value :: local_address
integer(kind=C_LONG), intent(in), value :: remote_address
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_replace_window_propose_x
end interface gpump_f_replace_window_propose_x

interface gpump_f_window_accept_x
subroutine gpump_f_window_accept_x(target, wx) &
bind(C, name='gpump_f_window_accept_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: wx
end subroutine gpump_f_window_accept_x
end interface gpump_f_window_accept_x

interface gpump_f_cork
subroutine gpump_f_cork() &
bind(C, name='gpump_f_cork')
use iso_c_binding
end subroutine gpump_f_cork
end interface gpump_f_cork

interface gpump_f_uncork
subroutine gpump_f_uncork(stream) &
bind(C, name='gpump_f_uncork')
use iso_c_binding
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_uncork
end interface gpump_f_uncork

interface gpump_f_stream_put
subroutine gpump_f_stream_put(target, stream, offset, remote_offset, size) &
bind(C, name='gpump_f_stream_put')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_put
end interface gpump_f_stream_put

interface gpump_f_iput
subroutine gpump_f_iput(target, offset, remote_offset, size) &
bind(C, name='gpump_f_iput')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_iput
end interface gpump_f_iput

interface gpump_f_stream_wait_put_complete
subroutine gpump_f_stream_wait_put_complete(target, stream) &
bind(C, name='gpump_f_stream_wait_put_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_put_complete
end interface gpump_f_stream_wait_put_complete

interface gpump_f_cpu_ack_iput
subroutine gpump_f_cpu_ack_iput(target) &
bind(C, name='gpump_f_cpu_ack_iput')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_cpu_ack_iput
end interface gpump_f_cpu_ack_iput

interface gpump_f_is_put_complete
subroutine gpump_f_is_put_complete(target, is_complete) &
bind(C, name='gpump_f_is_put_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_put_complete
end interface gpump_f_is_put_complete

interface gpump_f_wait_put_complete
subroutine gpump_f_wait_put_complete(target) &
bind(C, name='gpump_f_wait_put_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_wait_put_complete
end interface gpump_f_wait_put_complete

interface gpump_f_stream_get
subroutine gpump_f_stream_get(target, stream, offset, remote_offset, size) &
bind(C, name='gpump_f_stream_get')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_get
end interface gpump_f_stream_get

interface gpump_f_iget
subroutine gpump_f_iget(target, offset, remote_offset, size) &
bind(C, name='gpump_f_iget')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_iget
end interface gpump_f_iget

interface gpump_f_stream_wait_get_complete
subroutine gpump_f_stream_wait_get_complete(target, stream) &
bind(C, name='gpump_f_stream_wait_get_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_get_complete
end interface gpump_f_stream_wait_get_complete

interface gpump_f_cpu_ack_iget
subroutine gpump_f_cpu_ack_iget(target) &
bind(C, name='gpump_f_cpu_ack_iget')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_cpu_ack_iget
end interface gpump_f_cpu_ack_iget

interface gpump_f_is_get_complete
subroutine gpump_f_is_get_complete(target, is_complete) &
bind(C, name='gpump_f_is_get_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(inout) :: is_complete
end subroutine gpump_f_is_get_complete
end interface gpump_f_is_get_complete

interface gpump_f_wait_get_complete
subroutine gpump_f_wait_get_complete(target) &
bind(C, name='gpump_f_wait_get_complete')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
end subroutine gpump_f_wait_get_complete
end interface gpump_f_wait_get_complete

interface gpump_f_stream_put_x
subroutine gpump_f_stream_put_x(target, index, stream, offset, remote_offset, size) &
bind(C, name='gpump_f_stream_put_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: stream
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_stream_put_x
end interface gpump_f_stream_put_x

interface gpump_f_iput_x
subroutine gpump_f_iput_x(target, index, offset, remote_offset, size) &
bind(C, name='gpump_f_iput_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_LONG), intent(in), value :: offset
integer(kind=C_LONG), intent(in), value :: remote_offset
integer(kind=C_LONG), intent(in), value :: size
end subroutine gpump_f_iput_x
end interface gpump_f_iput_x

interface gpump_f_stream_wait_put_complete_x
subroutine gpump_f_stream_wait_put_complete_x(target, index, stream) &
bind(C, name='gpump_f_stream_wait_put_complete_x')
use iso_c_binding
integer(kind=C_INT), intent(in), value :: index
integer(kind=C_INT), intent(in), value :: target
integer(kind=C_LONG), intent(in), value :: stream
end subroutine gpump_f_stream_wait_put_complete_x
end interface gpump_f_stream_wait_put_complete_x
